@@ -1,7 +1,7 @@
 Package: mse
 Title: Tools for Running Management Strategy Evaluations using FLR
-Version: 2.1.0.9002
-Date: 2020-03-11
+Version: 2.1.0.9100
+Date: 2020-06-05
 Authors@R: c(person(given = "Iago", family = "Mosqueira", role = c("aut"),
   email = "iago.mosqueira@wur.nl"), 
   person("Ernesto", "Jardim", email = "ernesto.jardim@ec.europa.eu", role = c("aut", "cre")))
@@ -49,10 +49,11 @@ Collate:
   'performance.R'
   'run.R'
   'tune.R'
+  'fwd.R'
 VignetteBuilder: knitr
 Roxygen: list(markdown = TRUE)
 License: EUPL
 LazyLoad: Yes
 LazyData: No
 BugReports: https://github.com/iagomosqueira/mse/issues
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.0
