@@ -72,16 +72,20 @@ exportMethods(
   "FLmse",
   "FLoem",
   "FLom",
+  "fwd",
   "hcr",
   "hcr<-",
   "isys",
   "isys<-",
+  "iter",
   "mcN",
   "method",
   "method<-",
   "metrics",
   "observations",
   "observations<-",
+  "oem",
+  "oem<-",
   "performance",
   "phcr",
   "phcr<-",
